Kaggle Notebook | Image-to-Image-Style-Transfer | Version 10

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e275479",
+   "id": "5010adac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:37.044013Z",
-     "iopub.status.busy": "2023-04-06T05:15:37.043148Z",
-     "iopub.status.idle": "2023-04-06T05:15:42.934342Z",
-     "shell.execute_reply": "2023-04-06T05:15:42.933212Z"
+     "iopub.execute_input": "2023-04-06T05:54:05.855634Z",
+     "iopub.status.busy": "2023-04-06T05:54:05.854870Z",
+     "iopub.status.idle": "2023-04-06T05:54:13.111469Z",
+     "shell.execute_reply": "2023-04-06T05:54:13.110374Z"
     },
     "papermill": {
-     "duration": 5.89971,
-     "end_time": "2023-04-06T05:15:42.937014",
+     "duration": 7.265275,
+     "end_time": "2023-04-06T05:54:13.114109",
      "exception": false,
-     "start_time": "2023-04-06T05:15:37.037304",
+     "start_time": "2023-04-06T05:54:05.848834",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a440036",
+   "id": "b20ae2fe",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:42.946874Z",
-     "iopub.status.busy": "2023-04-06T05:15:42.944793Z",
-     "iopub.status.idle": "2023-04-06T05:15:44.290067Z",
-     "shell.execute_reply": "2023-04-06T05:15:44.288171Z"
+     "iopub.execute_input": "2023-04-06T05:54:13.124025Z",
+     "iopub.status.busy": "2023-04-06T05:54:13.122169Z",
+     "iopub.status.idle": "2023-04-06T05:54:14.124380Z",
+     "shell.execute_reply": "2023-04-06T05:54:14.122708Z"
     },
     "papermill": {
-     "duration": 1.351967,
-     "end_time": "2023-04-06T05:15:44.292347",
+     "duration": 1.008995,
+     "end_time": "2023-04-06T05:54:14.126732",
      "exception": false,
-     "start_time": "2023-04-06T05:15:42.940380",
+     "start_time": "2023-04-06T05:54:13.117737",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8fa37ef7",
+   "id": "5985743b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:44.300472Z",
-     "iopub.status.busy": "2023-04-06T05:15:44.299576Z",
-     "iopub.status.idle": "2023-04-06T05:15:44.566991Z",
-     "shell.execute_reply": "2023-04-06T05:15:44.565961Z"
+     "iopub.execute_input": "2023-04-06T05:54:14.135123Z",
+     "iopub.status.busy": "2023-04-06T05:54:14.134820Z",
+     "iopub.status.idle": "2023-04-06T05:54:14.410781Z",
+     "shell.execute_reply": "2023-04-06T05:54:14.409887Z"
     },
     "papermill": {
-     "duration": 0.275638,
-     "end_time": "2023-04-06T05:15:44.571281",
+     "duration": 0.287579,
+     "end_time": "2023-04-06T05:54:14.418003",
      "exception": false,
-     "start_time": "2023-04-06T05:15:44.295643",
+     "start_time": "2023-04-06T05:54:14.130424",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b660e7a",
+   "id": "21a641b7",
    "metadata": {
     "papermill": {
-     "duration": 0.004993,
-     "end_time": "2023-04-06T05:15:44.581562",
+     "duration": 0.005573,
+     "end_time": "2023-04-06T05:54:14.437563",
      "exception": false,
-     "start_time": "2023-04-06T05:15:44.576569",
+     "start_time": "2023-04-06T05:54:14.431990",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b00ce7e5",
+   "id": "f1bc84ab",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:44.593200Z",
-     "iopub.status.busy": "2023-04-06T05:15:44.592844Z",
-     "iopub.status.idle": "2023-04-06T05:15:58.614067Z",
-     "shell.execute_reply": "2023-04-06T05:15:58.612785Z"
+     "iopub.execute_input": "2023-04-06T05:54:14.450395Z",
+     "iopub.status.busy": "2023-04-06T05:54:14.450071Z",
+     "iopub.status.idle": "2023-04-06T05:54:27.223280Z",
+     "shell.execute_reply": "2023-04-06T05:54:27.221885Z"
     },
     "papermill": {
-     "duration": 14.030098,
-     "end_time": "2023-04-06T05:15:58.616826",
+     "duration": 12.78252,
+     "end_time": "2023-04-06T05:54:27.225696",
      "exception": false,
-     "start_time": "2023-04-06T05:15:44.586728",
+     "start_time": "2023-04-06T05:54:14.443176",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-gstj3zvb\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-gstj3zvb\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-82tezwzh\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-82tezwzh\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=c48dc4cf60ba9b10585f995dc222341e7cad123eef549bee9bbccd13657f3a0f\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-uwaeiggy/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=1fb5f0ec778ca425358fd5f3d7a5ee1febf0d6efa27737898e795c16dffd4c0d\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-_s4cmaea/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3afa4449",
+   "id": "63c278ac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:58.630619Z",
-     "iopub.status.busy": "2023-04-06T05:15:58.630266Z",
-     "iopub.status.idle": "2023-04-06T05:15:58.661428Z",
-     "shell.execute_reply": "2023-04-06T05:15:58.660473Z"
+     "iopub.execute_input": "2023-04-06T05:54:27.240187Z",
+     "iopub.status.busy": "2023-04-06T05:54:27.239854Z",
+     "iopub.status.idle": "2023-04-06T05:54:27.271832Z",
+     "shell.execute_reply": "2023-04-06T05:54:27.270909Z"
     },
     "papermill": {
-     "duration": 0.040508,
-     "end_time": "2023-04-06T05:15:58.663612",
+     "duration": 0.041929,
+     "end_time": "2023-04-06T05:54:27.274127",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.623104",
+     "start_time": "2023-04-06T05:54:27.232198",
      "status": "completed"
     },
     "tags": []
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17bd1d6b",
+   "id": "89d8af3a",
    "metadata": {
     "papermill": {
-     "duration": 0.005567,
-     "end_time": "2023-04-06T05:15:58.674997",
+     "duration": 0.006066,
+     "end_time": "2023-04-06T05:54:27.286456",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.669430",
+     "start_time": "2023-04-06T05:54:27.280390",
      "status": "completed"
     },
     "tags": []
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b03221",
+   "id": "f20a8407",
    "metadata": {
     "papermill": {
-     "duration": 0.005556,
-     "end_time": "2023-04-06T05:15:58.686232",
+     "duration": 0.00593,
+     "end_time": "2023-04-06T05:54:27.298611",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.680676",
+     "start_time": "2023-04-06T05:54:27.292681",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ce4dead3",
+   "id": "5492e1cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:58.698934Z",
-     "iopub.status.busy": "2023-04-06T05:15:58.698634Z",
-     "iopub.status.idle": "2023-04-06T05:15:58.708683Z",
-     "shell.execute_reply": "2023-04-06T05:15:58.707601Z"
+     "iopub.execute_input": "2023-04-06T05:54:27.313058Z",
+     "iopub.status.busy": "2023-04-06T05:54:27.312270Z",
+     "iopub.status.idle": "2023-04-06T05:54:27.322982Z",
+     "shell.execute_reply": "2023-04-06T05:54:27.322071Z"
     },
     "papermill": {
-     "duration": 0.018647,
-     "end_time": "2023-04-06T05:15:58.710589",
+     "duration": 0.020306,
+     "end_time": "2023-04-06T05:54:27.325049",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.691942",
+     "start_time": "2023-04-06T05:54:27.304743",
      "status": "completed"
     },
     "tags": []
@@ -358,13 +358,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce9f96c8",
+   "id": "b21692b5",
    "metadata": {
     "papermill": {
-     "duration": 0.00557,
-     "end_time": "2023-04-06T05:15:58.721979",
+     "duration": 0.006066,
+     "end_time": "2023-04-06T05:54:27.337362",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.716409",
+     "start_time": "2023-04-06T05:54:27.331296",
      "status": "completed"
     },
     "tags": []
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bffde39d",
+   "id": "820b60b8",
    "metadata": {
     "papermill": {
-     "duration": 0.005546,
-     "end_time": "2023-04-06T05:15:58.733264",
+     "duration": 0.006073,
+     "end_time": "2023-04-06T05:54:27.349651",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.727718",
+     "start_time": "2023-04-06T05:54:27.343578",
      "status": "completed"
     },
     "tags": []
@@ -396,19 +396,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d6a29faa",
+   "id": "8ff0b997",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:15:58.746856Z",
-     "iopub.status.busy": "2023-04-06T05:15:58.746098Z",
-     "iopub.status.idle": "2023-04-06T05:15:58.760016Z",
-     "shell.execute_reply": "2023-04-06T05:15:58.759124Z"
+     "iopub.execute_input": "2023-04-06T05:54:27.363824Z",
+     "iopub.status.busy": "2023-04-06T05:54:27.363517Z",
+     "iopub.status.idle": "2023-04-06T05:54:27.377715Z",
+     "shell.execute_reply": "2023-04-06T05:54:27.376667Z"
     },
     "papermill": {
-     "duration": 0.023069,
-     "end_time": "2023-04-06T05:15:58.762053",
+     "duration": 0.023867,
+     "end_time": "2023-04-06T05:54:27.379835",
      "exception": false,
-     "start_time": "2023-04-06T05:15:58.738984",
+     "start_time": "2023-04-06T05:54:27.355968",
      "status": "completed"
     },
     "tags": []
@@ -481,6 +481,115 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc507e97",
+   "metadata": {
+    "papermill": {
+     "duration": 0.006202,
+     "end_time": "2023-04-06T05:54:27.392470",
+     "exception": false,
+     "start_time": "2023-04-06T05:54:27.386268",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Loss Functions\n",
+    "* generator models are trained via their related discriminator models. They are updated to minimize the loss predicted by the discriminator for generated images marked as 'real' called as *adverserial loss*.\n",
+    "* generator model should also be good at regenerating the source image when used with the generator model called the *cycle loss*\n",
+    "* generator model is expected to output an image without translation when provided with an example from target domain called as *identity loss*\n",
+    "\n",
+    "The 4 loss functions we will be considering are:\n",
+    "1. Adverserial loss (L2, mean squared error)\n",
+    "2. Identity loss (L1, mean absolute error)\n",
+    "3. Forward Cycle loss (L1, Mean absolute error)\n",
+    "4. Bakward Cycle loss (L1 or mean absolute error)\n",
+    "\n",
+    "**we need to create a COMPOSITE MODEL to train each generator and share weights with related discriminator and other generator model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "25b96fd5",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-06T05:54:27.406416Z",
+     "iopub.status.busy": "2023-04-06T05:54:27.406134Z",
+     "iopub.status.idle": "2023-04-06T05:54:27.413605Z",
+     "shell.execute_reply": "2023-04-06T05:54:27.412550Z"
+    },
+    "papermill": {
+     "duration": 0.017514,
+     "end_time": "2023-04-06T05:54:27.416207",
+     "exception": false,
+     "start_time": "2023-04-06T05:54:27.398693",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "'''In the composite model the weights of the other model are marked as not trainable as we are interested in updating the first generator\n",
+    "model,i.e focus in the composite model\n",
+    "- discriminator is connected to the output of the generator to classify the images as real or fake.\n",
+    "-  second input for the composite model is defined as an image from the target domain(instead of the source domain),which the generator is \n",
+    "expected to output without the translation for the identity mapping.\n",
+    "- Forward Cycle Loss involves connecting the output of the generator to the other generator,which will reconstruct source image.\n",
+    "- Backward Cycle loss involves the image from the target domain used for the identity mapping then is also passed through the other \n",
+    "generator whose output is connected to our main generator as input and outputs a reconstructed version of that image from a target domain.\n",
+    "\n",
+    "Hence, 2 inputs and 4 outputs.\n",
+    "\n",
+    "Only weights of the first or main generator models are updated for the composite model as this is done by weighted sum of all loss \n",
+    "functions.\n",
+    "Cycle loss has more weight than adverserial loss in the paper(10 times)\n",
+    "'''\n",
+    "def define_composite_model(g_model_1,d_model,g_model_2,image_shape):\n",
+    "    #ensure the model we are updating is trainable\n",
+    "    g_model_1.trainable = True\n",
+    "    #mark discriminator as non-trainable\n",
+    "    d_model.trainable = False\n",
+    "    g_model_2.trainable = False\n",
+    "    #discriminator element\n",
+    "    input_gen = Input(shape=image_shape)\n",
+    "    gen1_out = g_model_1(input_gen)\n",
+    "    output_d = d_model(gen1_out)\n",
+    "    #identity element\n",
+    "    input_id = Input(shape=image_shape)\n",
+    "    output_id = g_model_1(input_id)\n",
+    "    #forward cycle\n",
+    "    output_f = g_model_2(gen1_out)\n",
+    "    #backward cycle\n",
+    "    gen2_out = g_model_2(input_id)\n",
+    "    output_b = g_model_1(gen2_out)\n",
+    "    #define the model graph\n",
+    "    model = Model([input_gen,input_id],[output_d,output_id,output_f,output_b])\n",
+    "    #optimization algorithm\n",
+    "    opt = Adam(lr=0.0002,beta_1=0.5)\n",
+    "    #model compile\n",
+    "    model.compile(loss=['mse','mae','mae','mae'],loss_weights=[1,5,10,10],optimizer=opt)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc18c43c",
+   "metadata": {
+    "papermill": {
+     "duration": 0.006053,
+     "end_time": "2023-04-06T05:54:27.429790",
+     "exception": false,
+     "start_time": "2023-04-06T05:54:27.423737",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -503,14 +612,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 33.680379,
-   "end_time": "2023-04-06T05:16:02.341509",
+   "duration": 33.796256,
+   "end_time": "2023-04-06T05:54:30.742636",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T05:15:28.661130",
+   "start_time": "2023-04-06T05:53:56.946380",
    "version": "2.4.0"
   }
  },
