Kaggle Notebook | Image-to-Image-Style-Transfer | Version 11

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5010adac",
+   "id": "52d1b727",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:05.855634Z",
-     "iopub.status.busy": "2023-04-06T05:54:05.854870Z",
-     "iopub.status.idle": "2023-04-06T05:54:13.111469Z",
-     "shell.execute_reply": "2023-04-06T05:54:13.110374Z"
+     "iopub.execute_input": "2023-04-06T06:13:56.969058Z",
+     "iopub.status.busy": "2023-04-06T06:13:56.968630Z",
+     "iopub.status.idle": "2023-04-06T06:14:03.701909Z",
+     "shell.execute_reply": "2023-04-06T06:14:03.700787Z"
     },
     "papermill": {
-     "duration": 7.265275,
-     "end_time": "2023-04-06T05:54:13.114109",
+     "duration": 6.741894,
+     "end_time": "2023-04-06T06:14:03.704544",
      "exception": false,
-     "start_time": "2023-04-06T05:54:05.848834",
+     "start_time": "2023-04-06T06:13:56.962650",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b20ae2fe",
+   "id": "8f198e48",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:13.124025Z",
-     "iopub.status.busy": "2023-04-06T05:54:13.122169Z",
-     "iopub.status.idle": "2023-04-06T05:54:14.124380Z",
-     "shell.execute_reply": "2023-04-06T05:54:14.122708Z"
+     "iopub.execute_input": "2023-04-06T06:14:03.715251Z",
+     "iopub.status.busy": "2023-04-06T06:14:03.713054Z",
+     "iopub.status.idle": "2023-04-06T06:14:04.388577Z",
+     "shell.execute_reply": "2023-04-06T06:14:04.387264Z"
     },
     "papermill": {
-     "duration": 1.008995,
-     "end_time": "2023-04-06T05:54:14.126732",
+     "duration": 0.682366,
+     "end_time": "2023-04-06T06:14:04.390836",
      "exception": false,
-     "start_time": "2023-04-06T05:54:13.117737",
+     "start_time": "2023-04-06T06:14:03.708470",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5985743b",
+   "id": "5a1d4855",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:14.135123Z",
-     "iopub.status.busy": "2023-04-06T05:54:14.134820Z",
-     "iopub.status.idle": "2023-04-06T05:54:14.410781Z",
-     "shell.execute_reply": "2023-04-06T05:54:14.409887Z"
+     "iopub.execute_input": "2023-04-06T06:14:04.399871Z",
+     "iopub.status.busy": "2023-04-06T06:14:04.399291Z",
+     "iopub.status.idle": "2023-04-06T06:14:04.675912Z",
+     "shell.execute_reply": "2023-04-06T06:14:04.675025Z"
     },
     "papermill": {
-     "duration": 0.287579,
-     "end_time": "2023-04-06T05:54:14.418003",
+     "duration": 0.285524,
+     "end_time": "2023-04-06T06:14:04.680139",
      "exception": false,
-     "start_time": "2023-04-06T05:54:14.130424",
+     "start_time": "2023-04-06T06:14:04.394615",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a641b7",
+   "id": "be48f8ea",
    "metadata": {
     "papermill": {
-     "duration": 0.005573,
-     "end_time": "2023-04-06T05:54:14.437563",
+     "duration": 0.006067,
+     "end_time": "2023-04-06T06:14:04.692499",
      "exception": false,
-     "start_time": "2023-04-06T05:54:14.431990",
+     "start_time": "2023-04-06T06:14:04.686432",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f1bc84ab",
+   "id": "b358ff09",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:14.450395Z",
-     "iopub.status.busy": "2023-04-06T05:54:14.450071Z",
-     "iopub.status.idle": "2023-04-06T05:54:27.223280Z",
-     "shell.execute_reply": "2023-04-06T05:54:27.221885Z"
+     "iopub.execute_input": "2023-04-06T06:14:04.706069Z",
+     "iopub.status.busy": "2023-04-06T06:14:04.705739Z",
+     "iopub.status.idle": "2023-04-06T06:14:17.404576Z",
+     "shell.execute_reply": "2023-04-06T06:14:17.402756Z"
     },
     "papermill": {
-     "duration": 12.78252,
-     "end_time": "2023-04-06T05:54:27.225696",
+     "duration": 12.708454,
+     "end_time": "2023-04-06T06:14:17.406956",
      "exception": false,
-     "start_time": "2023-04-06T05:54:14.443176",
+     "start_time": "2023-04-06T06:14:04.698502",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-82tezwzh\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-82tezwzh\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-6wgef3iz\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-6wgef3iz\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=1fb5f0ec778ca425358fd5f3d7a5ee1febf0d6efa27737898e795c16dffd4c0d\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-_s4cmaea/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=400d676f6e827cabaad2c4cf0dda26215f0de290123b16aa8502de8f408fdf06\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-pozr2ti9/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "63c278ac",
+   "id": "be6ca631",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:27.240187Z",
-     "iopub.status.busy": "2023-04-06T05:54:27.239854Z",
-     "iopub.status.idle": "2023-04-06T05:54:27.271832Z",
-     "shell.execute_reply": "2023-04-06T05:54:27.270909Z"
+     "iopub.execute_input": "2023-04-06T06:14:17.421498Z",
+     "iopub.status.busy": "2023-04-06T06:14:17.421177Z",
+     "iopub.status.idle": "2023-04-06T06:14:17.453874Z",
+     "shell.execute_reply": "2023-04-06T06:14:17.452933Z"
     },
     "papermill": {
-     "duration": 0.041929,
-     "end_time": "2023-04-06T05:54:27.274127",
+     "duration": 0.042617,
+     "end_time": "2023-04-06T06:14:17.456135",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.232198",
+     "start_time": "2023-04-06T06:14:17.413518",
      "status": "completed"
     },
     "tags": []
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d8af3a",
+   "id": "95881447",
    "metadata": {
     "papermill": {
-     "duration": 0.006066,
-     "end_time": "2023-04-06T05:54:27.286456",
+     "duration": 0.0061,
+     "end_time": "2023-04-06T06:14:17.468495",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.280390",
+     "start_time": "2023-04-06T06:14:17.462395",
      "status": "completed"
     },
     "tags": []
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20a8407",
+   "id": "d1d1bb4e",
    "metadata": {
     "papermill": {
-     "duration": 0.00593,
-     "end_time": "2023-04-06T05:54:27.298611",
+     "duration": 0.006058,
+     "end_time": "2023-04-06T06:14:17.480798",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.292681",
+     "start_time": "2023-04-06T06:14:17.474740",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5492e1cf",
+   "id": "1783c4e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:27.313058Z",
-     "iopub.status.busy": "2023-04-06T05:54:27.312270Z",
-     "iopub.status.idle": "2023-04-06T05:54:27.322982Z",
-     "shell.execute_reply": "2023-04-06T05:54:27.322071Z"
+     "iopub.execute_input": "2023-04-06T06:14:17.495239Z",
+     "iopub.status.busy": "2023-04-06T06:14:17.494359Z",
+     "iopub.status.idle": "2023-04-06T06:14:17.504652Z",
+     "shell.execute_reply": "2023-04-06T06:14:17.503752Z"
     },
     "papermill": {
-     "duration": 0.020306,
-     "end_time": "2023-04-06T05:54:27.325049",
+     "duration": 0.019795,
+     "end_time": "2023-04-06T06:14:17.506799",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.304743",
+     "start_time": "2023-04-06T06:14:17.487004",
      "status": "completed"
     },
     "tags": []
@@ -358,13 +358,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b21692b5",
+   "id": "b49ea19c",
    "metadata": {
     "papermill": {
-     "duration": 0.006066,
-     "end_time": "2023-04-06T05:54:27.337362",
+     "duration": 0.006158,
+     "end_time": "2023-04-06T06:14:17.519343",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.331296",
+     "start_time": "2023-04-06T06:14:17.513185",
      "status": "completed"
     },
     "tags": []
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820b60b8",
+   "id": "f22f8f1c",
    "metadata": {
     "papermill": {
-     "duration": 0.006073,
-     "end_time": "2023-04-06T05:54:27.349651",
+     "duration": 0.006313,
+     "end_time": "2023-04-06T06:14:17.531938",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.343578",
+     "start_time": "2023-04-06T06:14:17.525625",
      "status": "completed"
     },
     "tags": []
@@ -396,19 +396,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8ff0b997",
+   "id": "1f5ee9ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:27.363824Z",
-     "iopub.status.busy": "2023-04-06T05:54:27.363517Z",
-     "iopub.status.idle": "2023-04-06T05:54:27.377715Z",
-     "shell.execute_reply": "2023-04-06T05:54:27.376667Z"
+     "iopub.execute_input": "2023-04-06T06:14:17.546084Z",
+     "iopub.status.busy": "2023-04-06T06:14:17.545787Z",
+     "iopub.status.idle": "2023-04-06T06:14:17.559742Z",
+     "shell.execute_reply": "2023-04-06T06:14:17.558838Z"
     },
     "papermill": {
-     "duration": 0.023867,
-     "end_time": "2023-04-06T05:54:27.379835",
+     "duration": 0.023414,
+     "end_time": "2023-04-06T06:14:17.561750",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.355968",
+     "start_time": "2023-04-06T06:14:17.538336",
      "status": "completed"
     },
     "tags": []
@@ -484,13 +484,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc507e97",
+   "id": "0ff55c87",
    "metadata": {
     "papermill": {
-     "duration": 0.006202,
-     "end_time": "2023-04-06T05:54:27.392470",
+     "duration": 0.006166,
+     "end_time": "2023-04-06T06:14:17.574214",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.386268",
+     "start_time": "2023-04-06T06:14:17.568048",
      "status": "completed"
     },
     "tags": []
@@ -513,19 +513,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "25b96fd5",
+   "id": "8d3bfff5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:54:27.406416Z",
-     "iopub.status.busy": "2023-04-06T05:54:27.406134Z",
-     "iopub.status.idle": "2023-04-06T05:54:27.413605Z",
-     "shell.execute_reply": "2023-04-06T05:54:27.412550Z"
+     "iopub.execute_input": "2023-04-06T06:14:17.588827Z",
+     "iopub.status.busy": "2023-04-06T06:14:17.587945Z",
+     "iopub.status.idle": "2023-04-06T06:14:17.596026Z",
+     "shell.execute_reply": "2023-04-06T06:14:17.595221Z"
     },
     "papermill": {
-     "duration": 0.017514,
-     "end_time": "2023-04-06T05:54:27.416207",
+     "duration": 0.017551,
+     "end_time": "2023-04-06T06:14:17.598103",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.398693",
+     "start_time": "2023-04-06T06:14:17.580552",
      "status": "completed"
     },
     "tags": []
@@ -575,21 +575,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc18c43c",
+   "cell_type": "markdown",
+   "id": "5072410d",
    "metadata": {
     "papermill": {
-     "duration": 0.006053,
-     "end_time": "2023-04-06T05:54:27.429790",
+     "duration": 0.006115,
+     "end_time": "2023-04-06T06:14:17.610484",
      "exception": false,
-     "start_time": "2023-04-06T05:54:27.423737",
+     "start_time": "2023-04-06T06:14:17.604369",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Generator A Composite Model (BtoA)\n",
+    "1. Adversarial Loss: Domain-B -> Generator-A -> Domain-A -> Discriminator-A -> [real/fake]\n",
+    "2. Identity Loss: Domain-A -> Generator-A -> Domain-A\n",
+    "3. Forward Cycle Loss: Domain-B -> Generator-A -> Domain-A -> Generator-B -> Domain-B\n",
+    "4. Backward Cycle Loss: Domain-A -> Generator-B -> Domain-B -> Generator-A -> Domain-A\n",
+    "\n",
+    "- Inputs: Domain-B, Domain-A\n",
+    "- Outputs: Real, Domain-A, Domain-B, Domain-A\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "660b31a4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-06T06:14:17.624391Z",
+     "iopub.status.busy": "2023-04-06T06:14:17.624131Z",
+     "iopub.status.idle": "2023-04-06T06:14:17.634233Z",
+     "shell.execute_reply": "2023-04-06T06:14:17.633264Z"
+    },
+    "papermill": {
+     "duration": 0.019415,
+     "end_time": "2023-04-06T06:14:17.636276",
+     "exception": false,
+     "start_time": "2023-04-06T06:14:17.616861",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GAN models dont converge, it finds an equilibrium in generator and discriminator, so we cannot judge when the training should stop.\\nSo we save the model and use to it to generate sample image to image translations\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Load paired images dataset in Numpy array format, it will return list of 2 numpy arrays'''\n",
+    "def load_real_samples(filename):\n",
+    "    data = load(filename)\n",
+    "    #unpack the arrays\n",
+    "    X1,X2 = data['arr_0'],data['arr_1']\n",
+    "    #scaling from [0,255] to [-1,1]\n",
+    "    X1 = (X1-127.5)/127.5\n",
+    "    X2 = (X2 - 127.5)/127.5\n",
+    "    return X1,X2\n",
+    "\n",
+    "#selecting random batch of images for every iteration\n",
+    "'''This is implemented by taking the np array for a domain as input and returning the requested number of randomly selected\n",
+    "images, as well as the target for the PatchGAN dicriminator model indicating the images are real(target_value = 1.0)\n",
+    "'''\n",
+    "\n",
+    "def generate_real_images(dataset,n_samples,patch_shape):\n",
+    "    ix = randint(0,dataset.shape[0],n_samples)\n",
+    "    #retreive selected images\n",
+    "    X = dataset[ix]\n",
+    "    # generate 'real class labels (1)'\n",
+    "    y = ones((n_samples,patch_shape,patch_shape,1)) #this is 16X16X1 activation map\n",
+    "    return X,y\n",
+    "\n",
+    "def generate_fake_samples(g_model,dataset,patch_shape):\n",
+    "    X = g_model.predict(dataset)\n",
+    "    y = zeros((len(X),patch_shape,patch_shape,1))\n",
+    "    return X,y\n",
+    "\n",
+    "'''GAN models dont converge, it finds an equilibrium in generator and discriminator, so we cannot judge when the training should stop.\n",
+    "So we save the model and use to it to generate sample image to image translations\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
@@ -612,14 +686,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 33.796256,
-   "end_time": "2023-04-06T05:54:30.742636",
+   "duration": 32.694632,
+   "end_time": "2023-04-06T06:14:20.596630",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T05:53:56.946380",
+   "start_time": "2023-04-06T06:13:47.901998",
    "version": "2.4.0"
   }
  },
